# serial_data_viewer

./: README.md  analysis_options.yaml  pubspec.yaml
installers/: serial_data_viewer_innosetup.iss
lib/: main.dart
lib/app/data/: serial_port.dart  serial_port_config.dart
lib/app/global_widgets/: sidebar.dart
lib/app/modules/home/controllers/: home_base_controller.dart  home_controller.dart
lib/app/modules/home/views/: home_view.dart
lib/app/modules/home/views/widgets/: device_card.dart  home_body.dart  receive_data_card.dart  response_details.dart  send_custom_data_card.dart  send_generated_data_card.dart
lib/app/modules/root/controllers/: root_controller.dart
lib/app/modules/root/views/: root_view.dart
lib/app/modules/settings/controllers/: settings_base_controller.dart  settings_controller.dart
lib/app/modules/settings/views/: settings_view.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/services/: serial_services.dart
lib/app/utils/: device_commands.dart  general_utils.dart  global_widgets.dart  serial_utils.dart  theme_data.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
native/hub/: Cargo.toml
native/hub/src/: sample_functions.rs  with_request.rs
native/serial_communication/: Cargo.toml
native/serial_communication/src/: lib.rs
snap/: snapcraft.yaml
snap/gui/: serial_data_acquisition.desktop
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
